# netwatch

./: README.md  eslint.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  vitest.config.ts  vitest.setup.ts
.claude/: settings.local 2.json
.github/workflows/: build-agents.yml  build-rust-agent.yml
agent/: config.json  package-lock.json  package.json
agent-rust/: Cargo.toml
agent-rust/scripts/: build-all.sh
agent-rust/src/: main.rs
agent-rust/src/services/: blocking.rs  mod.rs  screen_recorder.rs  system_restrictions.rs
agent-rust/src/socket/: client.rs  events.rs
agent/src/: main 3.ts  main.ts
agent/src/background-tasks/: monitoring.ts
agent/src/handlers/: index.ts  ipc.ts  lifecycle.ts
agent/src/helpers/: auth.ts  config.ts
agent/src/screens/: index.ts  password-dialog.ts  schedule-dialog.ts  setup-dialog.ts
agent/src/services/: agent-service.ts  process-monitor.ts
agent/src/types/: index.ts
agent/src/utils/: password.ts  schedule.ts
docs/: API.md  DEVELOPER_GUIDE.md  USER_MANUAL.md
nginx/: nginx.conf
prisma/: schema.prisma
scripts/: create-admin.ts
socket-server/: package.json
socket-server/src/: index.ts
src/__tests__/: encryption.test.ts  utils.test.ts
src/__tests__/api/: alerts.test.ts  computers.test.ts
src/__tests__/lib/: rate-limit.test.ts  redis.test.ts  two-factor.test.ts  validation.test.ts
src/app/(auth)/accept-invitation/: page.tsx
src/app/(auth)/reset-password/: page.tsx
src/app/api/alert-rules/: route.ts
src/app/api/alerts/: route.ts
src/app/api/computers/: route.ts
src/app/api/invitations/: route.ts
src/app/api/scheduled-reports/: route.ts
src/app/api/screenshots/: route.ts
src/app/dashboard/: page.tsx
src/app/login/: page.tsx
src/components/alerts/: alerts-client.tsx
src/components/computers/: add-computer-dialog.tsx
src/components/modals/: index.tsx  invite-user-dialog.tsx
src/components/policies/: policies-client.tsx
src/components/screenshots/: screenshots-client.tsx
src/hooks/: use-socket.ts
src/lib/: auth.ts  email 2.ts  email.ts  error-tracking.ts  rate-limit 2.ts  rate-limit.ts  redis.ts  report-generator.ts  sentry.ts  two-factor.ts  validation.ts
(+19 files in other folders)
