[package]
name = "netwatch-agent"
version = "1.0.0"
edition = "2021"
authors = ["NetWatch Team"]
description = "NetWatch monitoring agent written in Rust"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Socket.IO client
rust_socketio = { version = "0.6", features = ["async"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screen capture
screenshots = "0.8"

# Input simulation
enigo = "0.2"

# Active window detection
active-win-pos-rs = "0.8"

# Global keyboard hook
rdev = "0.5"

# Clipboard access
arboard = "3"

# System information
sysinfo = "0.30"

# Terminal/PTY
portable-pty = "0.8"

# File system traversal
walkdir = "2"

# Base64 encoding
base64 = "0.22"

# Application directories
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography
sha2 = "0.10"
pbkdf2 = "0.12"
hmac = "0.12"

# Machine identification
machine-uid = "0.5"

# Network information
local-ip-address = "0.6"
mac_address = "1.1"

# Image processing (must match screenshots crate)
image = "0.24"

# Date/time
chrono = "0.4"

# Async channels
async-channel = "2"

# Once cell for lazy statics
once_cell = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# HTTP client (for file transfers)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Hostname
hostname = "0.3"

# URL parsing
url = "2"

# Hex encoding
hex = "0.4"

# Lazy statics
lazy_static = "1.4"

# User directories
dirs = "5"

# System tray
tray-icon = "0.14"

# Ctrl+C handling
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "tlhelp32", "handleapi", "psapi", "winnt", "sysinfoapi", "combaseapi", "objbase"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
